--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "flux": "^2.1.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
-    "react-router": "^2.5.1",
+    "react-router": "2.0.1",
     "webpack": "^1.13.1"
   },
   "devDependencies": {},
